# AtlisiaAuto

./: pyproject.toml
src/altlissiauto/: __main__.py  login.py  test_stage.py
src/altlissiauto/modules/: more_select.py  validate.py
